day five materials

--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
 						<h5>Morning</h5>
 						<ul>
 							<li>Lecture: Type Specimens / Joe Newton</li>
-							<li>Lecture: <a href="lectures/technical-setups/">Technical Setups</a></li>
+							<li>Demo: <a href="lectures/technical-setups/">Diacritic marks, opentype features, and setting up multiple masters</a></li>
 						</ul>
 
 						<h5>Afternoon</h5>
 						<ul>
 							<!-- <li>Optional Workshop: Basic Python and the Macro Panel OR Using Variable Fonts on the Web</li> -->
-							<li>Small Group Crits</li>
+							<li>Small Group Crits ( + Matteo )</li>
 						</ul>
 					</details>
 				</div>
@@ -138,12 +138,13 @@
 						<summary>Refinement</summary>
 						<h5>Morning</h5>
 						<ul>
+							<li>Demo: <a href="lectures/web-vf/">Using variable fonts on the web</a> and download <a href="lectures/web-vf/web-vf.zip">files</a>.</li>
 							<li>Adhoc Troubleshooting</li>
 						</ul>
 
 						<h5>Afternoon</h5>
 						<ul>
-							<li>Crits (+ Stephen and Matteo): present typeface progress and specimens</li>
+							<li>Crits (+ Stephen). Print out completed alphabet, wordmark, and three brand applications by EOD.</li>
 						</ul>
 					</details>
 				</div>
