--- a/lectures/web-vf/index.html
+++ b/lectures/web-vf/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Typography Workshop</title>
-	<link rel="stylesheet" type="text/css" href="style/poster.css">
+	<link rel="stylesheet" type="text/css" href="style/styles.css">
 </head>
 <body>
 	<main>
