add mockup template links

--- a/index.html
+++ b/index.html
@@ -183,18 +183,32 @@
 				<li>Overview: <a href="lectures/tips/">Design Tips and Glyphs Tools</a></li>
 				<li>Install from Plugin Manager: Modules, Reporter Toggler, Occupant Scripts, Word-o-mat. See steps on <a href="https://glyphsapp.com/learn/extending-glyphs" target="_blank">how to install these</a>.</li>
 			</ul>
-			<details open>
+			<details>
 			<summary>Tools</summary>
 			<ul>
 				<li><a href="spacing/spacing.txt" target="_blank">Sample Text for Spacing</a> and how to set up <a href="https://handbook.glyphsapp.com/en/settings/sample-strings/" target="_blank">Sample Strings in Glyphs</a></li>
 				<li><a href="spacing/cyrus-highsmith-spacing-manual.pdf">Spacing Manual</a> by Cyrus Highsmith</li>
 				<li><a href="https://jonathanhoefler.com/articles/how-to-proof-a-typeface" target="_blank">Proofing Text</a> by Jonathan Hoefler</li>
 				<li><a href="https://github.com/morisawausa/ProofingTool" target="_blank">Glyphs 3 Proofing Tool Plugin</a></li>
-				<li><a href="https://github.com/morisawausa/Glyphs-Scripts" target="_blank">Glyphs Scripts</a></li>				
+				<li><a href="https://github.com/morisawausa/Glyphs-Scripts" target="_blank">Glyphs Scripts</a></li>		
 			</ul>
 		</details>
 
-			<details>
+		<details>
+			<summary>Brand</summary>
+			<ul>
+				<li><a href="https://fontsinuse.com/" target="_blank">Fonts in Use</a></li>
+				<li><a href="https://www.typewolf.com/" target="_blank">Type Wolf</a></li>
+				<li><a href="https://standards.site/examples/" target="_blank">Standards</a></li>
+				<li><a href="https://mockup.maison/" target="_blank">Mockup Maison</a></li>
+				<li><a href="https://houseofmockups.com/" target="_blank">House of Mockups</a></li>
+				<li><a href="https://the-brandidentity.com/store?filter=mockups" target="_blank">The—Brand Identity</a></li>
+				<li><a href="https://yellowimages.com/" target="_blank">Yellow Images</a></li>
+				<li><a href="https://mrmockup.com/" target="_blank">Mr. Mockup</a></li>
+				<li><a href="https://www.mockupworld.co/" target="_blank">Mockup World</a></li>
+			</ul>
+		</details>
+		<details>
 			<summary>History</summary>
 			<ul>
 				<li><a href="https://christoph-knoth.com/shared/computed_type_-_christoph_knoth.pdf" target="_blank">Computed Type Design / Christoph Knoth </a></li>
