add link to tiger’s talk

--- a/index.html
+++ b/index.html
@@ -177,11 +177,13 @@
 			</details>
 		</section>
 		<section id="resources">
-			<h2>Slides & Resources</h2>		
+			<h2>Lecture Slides</h2>		
 			<ul>
 				<li>Lecture: <a href="lectures/type-tools/">Type and Tools</a></li>
 				<li>Overview: <a href="lectures/tips/">Design Tips and Glyphs Tools</a></li>
 				<li>Install from Plugin Manager: Modules, Reporter Toggler, Occupant Scripts, Word-o-mat. See steps on <a href="https://glyphsapp.com/learn/extending-glyphs" target="_blank">how to install these</a>.</li>
+				<li>Lecture: <a href="lectures/typeface-interface/">Typeface Interface</a></li>
+				<li>Guest Lecture by Tiger Dingsun: <a href="https://tigersites.netlify.app/sva-july-2024" target="_blank">It Turned From Snow to Rain: Some Thoughts on Words and Numbers</a>.
 			</ul>
 			<details>
 			<summary>Tools</summary>
